k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: football-backend
  ports:
  - port: 8000       # service port
    targetPort: 8000 # container port to route to
    protocol: TCP
