k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: football-frontend
  ports:
  - port: 5000       # service port
    targetPort: 5000 # container port for Flask app
    protocol: TCP
